--- a/WEB/AV2/ifpi.css
+++ b/WEB/AV2/ifpi.css
@@ -17,7 +17,7 @@ body {
     margin-top: 20px;
 }
 
-.course-sections section {
+.tipo_cursos section {
     flex: 1; /* Faz com que cada seção ocupe o mesmo espaço */
     padding: 20px;
     background-color: #f4f4f4;
@@ -25,25 +25,34 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.course-sections section h3 {
+.tipo_cursos section h3 {
     margin-bottom: 10px;
 }
 
-.course-sections section ul {
+.tipo_cursos section ul {
     list-style: none;
-    padding-left: 0;
+    padding-left: 0px;
 }
 
-.course-sections section ul li {
+.tipo_cursos section ul li {
     margin-bottom: 8px;
 }
 
-.course-sections section ul li a {
+.tipo_cursos section ul li a {
     color: #004a86;
     text-decoration: none;
 }
 
+#texto_centralizado {
+    display: inline;
+    text-align: center;
+}
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 header {
     background-color: #2f9e41;
