--- a/WEB/AV2/ifpi.css
+++ b/WEB/AV2/ifpi.css
@@ -112,7 +112,7 @@ nav ul li a {
 }
 
 .btn {
-    background-color: #004a86;
+    background-color: #2f9e41;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
