--- a/PFE/Projeto_MIrrorFashion/css/sobre.css
+++ b/PFE/Projeto_MIrrorFashion/css/sobre.css
@@ -1,9 +1,4 @@
 body {
-    font-family: "Arial", "Helvetica", sans-serif;
-    border-color: red;
-    border-style: solid;
-    border-width: 1px;
-    background: gold;
     color: #333333;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif
 }
@@ -11,6 +6,7 @@ body {
 h1 {
     font-family: serif;
     background-image: url(img/sobre-background.jpg);
+    background-color: #ccc;
 }
 
 h2 {
@@ -18,22 +14,20 @@ h2 {
     border-bottom: 2px solid #333333;
 }
 
-p {
-    color: blue;
-    background-color: yellow;
-    font-family: monospace;
-    text-align: right;
-    line-height: 3px;
-    letter-spacing: 3px;
-    word-spacing: 5px;
-    text-indent: 50px;
-}
-
-figure{
+figure {
     background-color: #F2EDED;
     border: 1px solid #ccc;
     text-align: center;
 }
-figcaption{
+
+figcaption {
     font-style: italic;
+}
+
+p {
+    text-align: justify;
+}
+
+.logo{
+    background-image: url(img/logo.jpg);
 }
